test/sh/error/declare/check_bool_assign.sk
mut x: Int = 1 is 1
